Update text template

--- a/cv.tex
+++ b/cv.tex
@@ -1,10 +1,3 @@
-%-------------------------
-% Resume in Latex
-% Author : Yauheni Baltukha
-% Based off of: https://github.com/baltuky/latex-cv
-% License : MIT
-%------------------------
-
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -106,92 +99,71 @@
 
 %----------HEADING----------
 \begin{center}
-    \textbf{\Huge \scshape Yauheni Baltukha} \\ \vspace{1pt}
-    \small \href{mailto:evgenii.boltuho@gmail.com}{\underline{evgenii.boltuho@gmail.com}} $|$ 
-    \href{https://www.linkedin.com/in/baltuky}{\underline{linkedin.com/in/baltuky}} $|$
-    \href{https://github.com/baltuky}{\underline{github.com/baltuky}}
+    \textbf{\Huge \scshape Adrian Silva} \\ \vspace{1pt}
+    \small \href{mailto:adri4silva@gmail.com}{\underline{adri4silva@gmail.com}} $|$ 
+    \href{https://www.linkedin.com/in/adri4silva}{\underline{linkedin.com/in/adri4silva}} $|$
+    \href{https://github.com/adri4silva}{\underline{github.com/adri4silva}}
 \end{center}
 
 
 %-----------SUMMARY-----------
 \section{Summary}
 \justify
-With over a decade of experience as a software engineer, I have successfully contributed to both small and large-scale
-companies. As a versatile engineer, my true passion lies in constructing robust and scalable systems,
-specializing in the development of backend services and data pipelines.
-My enthusiasm for problem-solving and the inherent joy I find in overcoming intricate engineering challenges fuel my
-drive to build innovative solutions.
+iOS Engineer with 6+ years of experience delivering robust applications across diverse team environments, from 2-person startups to 25+ developer organizations. Specialized in test-driven development (TDD/BDD) and functional programming paradigms (FP/FRP). Deep expertise in modern iOS frameworks including SwiftUI, UIKit, Combine, RxSwift, and ReactiveSwift, with proven proficiency in MVVM, Redux, and TCA architectures. Passionate about agile methodologies (Scrum/Kanban) and building products from concept to launch.
 
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Senior SWE}{Jun 2021 -- Present}
-      {Spotify}{Stockholm}
+      {Engineer II}{Jun. 2022 -- Present}
+      {Trade Republic}{Remote}
       \resumeItemListStart
-        \resumeItem{Designed and implemented a scalable service for self-serve email recovery, enabling 30k users/month to securely regain access to their accounts after an account takeover.}
-        \resumeItem{Developed and launched a flexible, scalable service for executing workflow-like tasks, which efficiently executes ~3M tasks daily and is now utilized by multiple squads across the product area.}
-        \resumeItem{Led an initiative that reduced the operational cost of workflows owned by the squad running on GCP Dataflow by 63\%, utilizing optimizations that reduced shuffle and improved resource utilization.}
+        \resumeItem{Built core debit card functionality from scratch, including card provisioning, real-time transaction tracking, card controls, and data visualization features (spending bubbles chart)}
+        \resumeItem{Contributed to launching a consumer debit card used by millions of users from concept to production, navigating complex technical challenges while ensuring seamless integration with the mobile banking platform}
+        \resumeItem{Drove development of the child savings account product, used by thousands of users across Europe, leading the adaptation of savings plan flows and implementing co-parenting features to enable shared account management, delivering a seamless investment experience for families}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Senior SWE}{Nov 2019 -- Mar 2021}
-      {Lyft}{Minsk}
+      {iOS Developer - Senior iOS Developer}{Dec. 2020 -- Jun. 2022}
+      {Hopin}{Remote}
       \resumeItemListStart
-        \resumeItem{Implemented multi-versioning Protobuf schema support for Apache Flink consumer applications.}
-        \resumeItem{Designed and developed a CLI tool to efficiently manage data pipelines.}
-        \resumeItem{Designed a service to materialize collected data into Presto tables.}
-        \resumeItem{Orchestrated the deployment of Helm charts for Presto and Hive Metastore components.}
+        \resumeItem{Founding member of mobile team, establishing initial iOS architecture and project structure using SwiftUI and The Composable Architecture, setting technical foundation for scalable virtual events platform}
+        \resumeItem{Implemented real-time communication features including WebRTC-based video streaming, chat system, and video conferencing capabilities, enabling seamless virtual event experiences for users worldwide}
+        \resumeItem{Built interactive engagement tools such as in-chat polling and engagement games, enhancing attendee participation and creating dynamic event environments from mobile devices}
       \resumeItemListEnd
       
-      \resumeSubheading
-      {Senior SWE}{Jul 2019 -- Nov 2019}
-      {Juno}{Minsk}
+    \resumeSubheading
+      {Junior iOS Developer}{Aug. 2019 -- Dec. 2020}
+      {FREENOW}{Barcelona, Spain}
       \resumeItemListStart
-        \resumeItem{Designed and developed Flink's source/sink components for backing up Kafka data to a remote file system.}
-        \resumeItem{Developed Flink's Kudu sink to provide integration with Kudu for efficient data writing.}
-        \resumeItem{Utilized Apache Airflow pipelines to schedule periodic backups of Kudu databases.}
-        \resumeItem{Implemented the Kudu Flink Catalog to facilitate data accessibility through Flink's Table API.}
+        \resumeItem{Developed driver engagement and incentive products for Europe's leading ride-hailing platform (14M+ passengers, 100+ cities), implementing bonus structures and rewards programs to increase driver retention and app usage across the BMW-Daimler mobility joint venture}
+        \resumeItem{Modernized legacy codebase by migrating from Objective-C to Swift, implementing modularization with Tuist, and establishing functional programming patterns with custom Redux architecture and RxSwift for a scalable, maintainable solution}
+        \resumeItem{Contributed across full product lifecycle from discovery and design feedback through A/B testing with Firebase/Mixpanel, working in T-shaped Spotify-model agile teams with comprehensive test coverage (UI and unit tests)}
       \resumeItemListEnd
       
-      \resumeSubheading
-      {Senior SWE}{Nov 2015 -- May 2019}	
-      {EPAM Systems}{Minsk}
+    \resumeSubheading
+      {iOS Developer Intern}{Apr 2018 -- Jul 2019}	
+      {Quobis}{O Porriño, Spain}
       \resumeItemListStart
-        \resumeItem{Designed and developed Scala-based batch/streaming Spark applications to process lithography data.}
-        \resumeItem{Created Kibana dashboards for processing engineers to enhance manufacturing cycles.}
-        \resumeItem{Collaborated closely with data analysts and process engineers to gather and analyze requirements.}
-        \resumeItem{Mentored and guided junior and mid-level software engineers.}
+        \resumeItem{Developed FERMAX Blue smart home application, implementing WebRTC-based video streaming and real-time communication for remote door camera monitoring and guest interaction}
+        \resumeItem{Built remote access control features enabling users to conduct video calls with visitors, unlock doors remotely, and manage home security from anywhere through iOS app}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 
 %-----------PROJECTS-----------
-\section{Projects}
+\section{Teaching Experience}
     \resumeSubHeadingListStart
-     \resumeProjectHeading
-          {\textbf{Data collection platform for events analytics} $|$ \emph{Scala, Flink, k8s, AWS, Presto}}{May 2020 -- Mar 2021}
-          \resumeItemListStart
-            \resumeItem{Designed and developed a system to consume and store analytics events.}
-            \resumeItem{Explored different approaches for materializing data into Presto tables and managing Presto table schemas.}
-          \resumeItemListEnd
-
-      \resumeProjectHeading
-          {\textbf{Data Analytics Platform} $|$ \emph{Scala, Spark, Kafka, ELK, AWS}}{Sep 2018 -- Mar 2019}
-          \resumeItemListStart
-            \resumeItem{Created Kibana dashboards to visualize lithography logs.}
-            \resumeItem{Developed Spark batch/streaming applications to process lithography logs and load them into ElasticSearch.}
-          \resumeItemListEnd
-
-      \resumeProjectHeading
-          {\textbf{Hotel loyalty system} $|$ \emph{Java, Oracle, Spring Framework, GWT}}{Nov 2015 -- Sep 2017}
-          \resumeItemListStart
-            \resumeItem{Designed and developed a service for processing and managing promo codes.}
-            \resumeItem{Integrated GWT UI application with the server-side for efficient promo code management.}
-            \resumeItem{Developed load tests using Gatling for performance testing.}
-          \resumeItemListEnd
+      \resumeSubheading
+        {iOS Fundamentals - App Release}{Aug. 2023 -- Present}	
+        {KeepCoding}{Remote}
+        \resumeItemListStart
+          \resumeItem{iOS Fundamentals Instructor, teaching Swift, UIKit, and Xcode basics to bootcamp students, guiding them through hands-on projects including a Spotify player clone to build foundational mobile development skills}
+          \resumeItem{App Release \& CI/CD Professor, educating students on production deployment workflows using App Store Connect, Xcode Cloud pipelines, and Firebase integration for crash reporting and analytics}
+          \resumeItem{Mentored aspiring iOS developers through full development lifecycle, from interface design and Swift fundamentals to automated testing, continuous integration, and App Store release best practices}
+        \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
@@ -199,8 +171,8 @@ drive to build innovative solutions.
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Scala} \\
-     \textbf{Technologies}{: Apache Spark, Apache Kafka, AWS, Apache Flink, Docker, K8s} \\
+     \textbf{Languages}{: Swift, JavaScript, Kotlin} \\
+     \textbf{Technologies}{: UIKit, SwiftUI, MVVM, Combine, RxSwift, ReactiveSwift, TCA, Spring Boot} \\
     }}
  \end{itemize}
  
@@ -208,8 +180,20 @@ drive to build innovative solutions.
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Belarusian State University of Informatics and Radioelectronics }{Minsk, BY}
-      {Bachelor}{Sep. 2013 -- Jun 2017}
+      {Universitat Oberta de Catalunya}{Remote}
+      {Bachelor's Degree in Computer Engineering}{Sep. 2019 -- Jun. 2020}
+    \resumeSubheading
+      {KeepCoding}{Remote}
+      {Mobile Engineering Bootcamp}{Jun. 2018 -- Jun. 2019}
+    \resumeSubheading
+      {CPR Daniel Castelao}{Vigo, Spain}
+      {Higher Technician in Software Development}{Sept. 2016 -- Jun. 2018}
+    \resumeSubheading
+      {Univesidad Nacional de Educacion a Distancia}{Remote}
+      {Bachelor's Degree in Computer Engineering}{Sept. 2016 -- Dec. 2018}
+    \resumeSubheading
+      {Univesidad de Vigo}{Vigo, Spain}
+      {Bachelor's Degree in Electrical Engineering}{Sept. 2014 -- Jun. 2016}
   \resumeSubHeadingListEnd
 
 %-------------------------------------------
