Update cv with tools

--- a/cv.tex
+++ b/cv.tex
@@ -172,7 +172,8 @@ iOS Engineer with 6+ years of experience delivering robust applications across d
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Swift, JavaScript, Kotlin} \\
-     \textbf{Technologies}{: UIKit, SwiftUI, MVVM, Combine, RxSwift, ReactiveSwift, TCA, Spring Boot} \\
+     \textbf{Technologies}{: UIKit, SwiftUI, MVVM, Combine, RxSwift, ReactiveSwift, TCA} \\
+     \textbf{Tools}{: Xcode, Claude Code, Cursor} \\
     }}
  \end{itemize}
  
