Add city header

--- a/cv.tex
+++ b/cv.tex
@@ -100,7 +100,9 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Adrian Silva} \\ \vspace{1pt}
-    \small \href{mailto:adri4silva@gmail.com}{\underline{adri4silva@gmail.com}} $|$ 
+    \small
+    \textbf{Vigo, Spain} $|$
+    \href{mailto:adri4silva@gmail.com}{\underline{adri4silva@gmail.com}} $|$ 
     \href{https://www.linkedin.com/in/adri4silva}{\underline{linkedin.com/in/adri4silva}} $|$
     \href{https://github.com/adri4silva}{\underline{github.com/adri4silva}}
 \end{center}
